# lem_in

./: !!!  !!!test!!!  123  CMakeLists.txt  DELETE_IT.c  breadth_first_search.c  choice.c  data_check.c  depth_first_search.c  free_lemin.c  input_validation.c  input_validation_2.c  lem_in.h  lem_init.c  lem_init_2.c  lem_realloc.c  main.c  pack_routes.c  print_lemin.c  print_lemin_2.c  print_lemin_3.c  print_lemin_3.c.c  print_lemin_one_route.c  sub.c  sub_2.c  sub_data_check.c  test  test2  test4  test5  test8  test9  test_coord  types_input.c  usage.c  write_input.c
libft/: Makefile  ft_arg_void.c  ft_atoi.c  ft_binary.c  ft_character.c  ft_check.c  ft_finder.c  ft_flag_char.c  ft_max.c  ft_min_fild_width.c  ft_null_format.c  ft_num_len.c  ft_num_strlen.c  ft_num_width.c  ft_octal.c  ft_octal_long.c  ft_parse.c  ft_precision.c  ft_print_format.c  ft_printf.c  ft_printf.h  ft_put_num_base.c  ft_putnstr.c  ft_signed.c  ft_signed_int_decimal.c  ft_signed_int_decimal_long.c  ft_single_persent.c  ft_size_spec.c  ft_string.c  ft_strndup.c  ft_strnjoin.c  ft_strnlen.c  ft_unsigned.c  ft_unsigned_decimal.c  ft_unsigned_decimal_long.c  ft_unsigned_hexadesimalx.c  ft_unsigned_hexadesimalxl.c  ft_wcharacter.c  ft_wcharlen.c  ft_width_padd.c  (+5 more)
